<resources>
    <string name="app_name">Fraction Lesson</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_text">Math Lesson</string>
    <string name="button_start">Start</string>
    <string name="correct_text">Correct:</string>
    <string name="correct_number">0</string>
    <string name="total_text">Total:</string>
    <string name="empty_number">0</string>
    <string name="wrong_text">Wrong:</string>
    <string name="wrong_number">0</string>
    <string name="button_next">Next</string>
    <string name="your_result">Your Result</string>
    <string name="button_exit">Exit</string>

    <string name="Function">Math Function:    </string>
    <string name="Add">Add</string>
    <string name="Sub">Sub</string>
    <string name="Mul">Mul</string>
    <string name="Div">Div</string>

    <string name="Level"   >Number of Digits: </string>
    <string name="level_0">10</string>
    <string name="level_1">100</string>
    <string name="level_2">1000</string>

    <string name="Randomize">Randomize</string>
    <string name="Random">Random</string>
    <string name="Ordered">Ordered</string>

    <string name="Mode">Mode</string>
    <string name="Whole">Whole</string>
    <string name="Fraction">Fraction</string>

    <string name="Range">Range</string>
    <string name="Start">Start:</string>
    <string name="End">End:</string>
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Slash">/</string>

    <string name="LCM">LCM</string>
    <string name="GCD">GCD</string>

    <string name="Delete">Del</string>
    <string name="Enter">Enter</string>

    <string name="Number">Number of Problems: </string>

    <string name="Go">Start</string>

    <string name="new_lesson">New Lesson</string>

</resources>