<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.FragmentFractionLesson">

    <LinearLayout
        android:id="@+id/linearLayoutStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal"
        android:background="@color/blue"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewNumerator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_number"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong_number"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_number"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewNumerator"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:autoSizeMaxTextSize="70sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@color/background_color"
        android:gravity="end"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutStatus" />


    <TextView
        android:id="@+id/textViewDenominator"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:autoSizeMaxTextSize="70sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@color/background_color"
        android:gravity="end"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumerator" />

    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:autoSizeMaxTextSize="70sp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@color/background_color"
        android:gravity="end"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDenominator" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:autoSizeMaxTextSize="70sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@color/background_color"
        android:gravity="end"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewComment" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn1"
            android:text="@string/One"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn2"
            android:text="@string/Two"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn3"
            android:text="@string/Three"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btnlcm"
            android:text="@string/LCM"
            android:textSize="35sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn4"
            android:text="@string/Four"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn5"
            android:text="@string/Five"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn6"
            android:text="@string/Six"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btngcd"
            android:text="@string/GCD"
            android:textSize="35sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn7"
            android:text="@string/Seven"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn8"
            android:text="@string/Eight"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn9"
            android:text="@string/Nine"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btnslash"
            android:text="@string/Slash"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btnDel"
            android:text="@string/Delete"
            android:textSize="45sp"
            android:textColor="@color/blue"
            android:background="@color/background_color"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btn0"
            android:text="@string/Zero"
            android:textSize="45sp"
            android:textColor="@color/text_color"
            android:background="@color/background_color"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/btnEquals"
            android:text="@string/Enter"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>