<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.FragmentConfigure">


    <TextView
        android:id="@+id/functionView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:minHeight="35dp"
        android:gravity="bottom"
        android:text="@string/Function"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutFunction"/>

    <LinearLayout
        android:id="@+id/linearLayoutFunction"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/functionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/functionButton0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/switch_on"
            android:text="@string/Add"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/functionView" />


        <Button
            android:id="@+id/functionButton1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/switch_off"
            android:textColor="@color/black"
            android:text="@string/Sub"
            app:layout_constraintTop_toBottomOf="@+id/functionView" />

        <Button
            android:id="@+id/functionButton2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/switch_off"
            android:textColor="@color/black"
            android:text="@string/Mul"
            app:layout_constraintTop_toBottomOf="@+id/functionView" />


        <Button
            android:id="@+id/functionButton3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:backgroundTint="@color/switch_off"
            android:textColor="@color/black"
            android:text="@string/Div"
            app:layout_constraintTop_toBottomOf="@+id/functionView" />

    </LinearLayout>

    <TextView
        android:id="@+id/digitView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:minHeight="35dp"
        android:text="@string/Level"
        android:layout_marginBottom="900dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutDigit"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFunction" />


    <LinearLayout
        android:id="@+id/linearLayoutDigit"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/digitView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/digitButton0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/switch_on"
            android:textColor="@color/black"
            android:text="@string/level_0"
            app:layout_constraintTop_toBottomOf="@+id/digitView" />


        <Button
            android:id="@+id/digitButton1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:text="@string/level_1"
            android:backgroundTint="@color/switch_off"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/digitView" />


        <Button
            android:id="@+id/digitButton2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/level_2"
            android:backgroundTint="@color/switch_off"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/digitView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutOptionText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDigit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/randomView"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/Randomize"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="8dp"
            android:minHeight="35dp"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutOptionButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutOptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/randomButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginEnd="95dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/switch_on"
            android:text="@string/Ordered"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutOptionText" />

   </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRandR"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutOptionButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/rangeButton"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/switch_off"
            android:textColor="@color/black"
            android:text="@string/Range" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutStart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRandR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <TextView
            android:id="@+id/startTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/Start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:visibility="invisible"
            android:gravity="bottom"
            android:minHeight="40dp"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/startEditTextNumberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:autofillHints=""
            android:visibility="invisible"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="425dp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEnd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

    <TextView
            android:id="@+id/endTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/End"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="20dp"
            android:visibility="invisible"
            android:minHeight="40dp"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/endEditTextNumberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:autofillHints=""
            android:visibility="invisible"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNumProblems"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/numTextView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="20dp"
            android:minHeight="90dp"
            android:gravity="bottom"
            android:text="@string/Number"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/numEditTextNumberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:autofillHints=""
            android:gravity="bottom"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:text="@string/Go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutNumProblems" />

</androidx.constraintlayout.widget.ConstraintLayout>